# thox-kickstarter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  design-preview.html  development_queue.md
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/Updated Kickstarter Campaign-handoff/project/uploads/thox-kickstarter-campaign-main/: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  ecosystem_map.md  package-lock.json  package.json  pyproject.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/: .gitignore  Cargo.toml  LICENSE  README.md  development_queue.md  ecosystem_map.md  mvp_catalog.md  showcase.html
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/.github/workflows/: ci.yml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/configs/: leader.env.example  worker.env.example
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/crates/magair-core/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/crates/magair-core/src/: ai.rs  auth.rs  lib.rs  metrics.rs  protocol.rs  store.rs
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/crates/magair-ctl/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/crates/magair-ctl/src/: main.rs
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/crates/magair-node/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/dashboard/static/: index.html
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/docs/: API.md  CLAUDE_REVIEW_AND_IMPROVEMENT.md  CONFLICT_RESOLUTION_MATRIX.md  EDGE_AI_JOBS.md  MAGSTACK_AIR_RUNTIME_ARCHITECTURE.mmd  OPERATIONS.md  SECURITY.md  THOXOS_AIR_ALIGNMENT.md  VALIDATION.md
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/models/: intent_v1.json  sensor_anomaly_v1.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/payloads/: embed_hash.json  intent.json  sensor_anomaly.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/scripts/: build_pi.sh  create_ap_nmcli.sh  install_pi_node.sh  join_wifi_nmcli.sh  run_local_standalone.sh  validate_static.sh
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/sdk/python/: pyproject.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/systemd/: magstack-air-node.service
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/magstack-air-edge-rs-with-showcase/tools/: check_dashboard_script.py  static_rust_sentinel.py
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ecosystem_map.md  package.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/.github/workflows/: ci.yml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/certification/accessibility-validator/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/certification/branding-validator/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/certification/release-gates/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/certification/release-gates/src/: lib.rs
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/certification/ux-validator/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/design-systems/thox-ai-txf/: ACCESSIBILITY.md  AGENTS.md  CERTIFICATION.md  COMPONENTS.md  DESIGN.md  DEVICES.md  DIGITAL-HUMANS.md  MANIFEST.schema.json  MEMORY.md  NAVIGATION.md  TOKENS.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/docs/adr/: 0001-experience-fabric-above-design-system.md  0002-thoxy-single-visible-identity.md  0003-locked-navigation-model.md  0004-release-gate-experience-score.md  0005-ux-engine-token-source-of-truth.md
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/docs/strategy/: README.md  TXF-Enterprise-Standardization-Program.docx  TXF-UX-Engine-Integration-Reference.docx
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/flutter/: pubspec.yaml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/kotlin/: build.gradle.kts
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/react/: package.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/react-native/: package.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/rust/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/swift/: Package.swift
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/tauri/: Cargo.toml
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/sdk/web-components/: package.json
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/standards/: accessibility-specification.md  agent-behavior-specification.md  digital-human-specification.md  interaction-specification.md  ux-specification.md
designs/thox-ai-kickstarter-campaign-handoff/project/uploads/thox-experience-fabric/tools/ux-engine/: README.md  STANDARDIZATION.md  ecosystem_map.md  package.json
(+577 files in other folders)
