[workspace]
members = [
  "crates/magair-core",
  "crates/magair-node",
  "crates/magair-ctl"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/thoxai/magstack-air-edge-rs"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tiny_http = "0.12"
uuid = { version = "1.8", features = ["v4", "serde"] }
