[package]
name = "magair-node"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
magair-core = { path = "../magair-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
uuid.workspace = true
