[package]
name = "accessibility-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Validates WCAG AA + THOX accessibility floor in the TXF manifest."

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
