[package]
name = "release-gates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TXF release-gate CLI. Aggregates the four validators and computes the THOX Experience Score."

[[bin]]
name = "thox-cert"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ux-validator = { path = "../ux-validator" }
branding-validator = { path = "../branding-validator" }
accessibility-validator = { path = "../accessibility-validator" }
txf-core = { path = "../../packages/txf-core" }
txf-compliance = { path = "../../packages/txf-compliance" }

[lints]
workspace = true
